[REFACTOR] 참석자만 보이도록 수정